fix: org chart menu alignment for nodes (#121)
fix: org chart menu alignment for nodes

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -196,7 +196,7 @@
     }
     .boc-chart-menu{
         z-index: 9;
-        top: -111px !important;
+        // top: -111px !important;
         font-family: var(--bs-body-font-family);
         @extend .py-3,.px-2,.bg-white,.fs-6;
     }
